[tool.poetry]
name = "tplinkmon"
version = "0.0.1"
description = "A Python package to monitor TP-Link devices and expose metrics for Prometheus."
authors = ["Fergus In London <fergus@fergus.london>"]

[tool.poetry.dependencies]
python = "^3.9"
PyP100 = "^0.0.18"
prometheus-client = "^0.13.1"
click = "^8.0.4"
loguru = "^0.6.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
# Example dev dependencies
# pytest = "^7.0.0"
# black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "tplinkmon"
from = "."